# Conan_MVP

./: .gitignore
consumer/: CMakeLists.txt  conanfile.py
consumer/include/Consumer/: Consumer.h
consumer/src/: Consumer.cpp
consumer/test_package/: CMakeLists.txt
consumer/test_package/src/: example.cpp
core/: CMakeLists.txt  conanfile.py  graph.html
core/include/Core/: Core.h
core/src/: Core.cpp
core/test_package/: CMakeLists.txt
core/test_package/src/: example.cpp
